--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div id="main-div">
       <div id="buttons-div">
         <table id="buttons-table">
-            <tr id=display-row">
+            <tr id="display-row">
                 <td colspan="4">
                     <input id="display" disabled/>
                 </td>
-          <tr id=input-row">
+          <tr id="input-row">
             <td colspan="4">
                 <input id="input" disabled/>
             </td>
